# GameOfLifePython

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
game/: main.py
game/tests/: cli.py  map.py
game/tests/cli/: cli.py  expected_display.txt  test_map.txt
game/tests/test_cli/: test_cli.py
game/utils/: cli.py  map.py  tui.py
