[project]
name = "gameoflifepython"
version = "0.1.0"
description = "Recreation of Conways Game of Life in python."
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
    "typer>=0.15.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["game"]

[project.scripts]
game = "game.main:app"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade (modern Python syntax)
    "N",  # PEP8 Naming
]
